--- a/src/app/features/dashboard/seeker/seeker-dashboard.component.html
+++ b/src/app/features/dashboard/seeker/seeker-dashboard.component.html
@@ -8,7 +8,7 @@
     </button>
     <!-- Brand Logo -->
     <a class="brand-logo" routerLink="/dashboard/jobseeker">
-      <img src="/assets/jobnetlogo2.png" alt="" width="150" height="45" style="object-fit: cover;" loading="lazy">
+      <img src="/assets/jobnetlogo2.png" loading="lazy" alt="" width="150" height="45" style="object-fit: cover;" loading="lazy">
     </a>
     <!-- User Profile -->
     <div class="user-profile" (click)="toggleUserDropdown()">
