--- a/src/app/shared/sections/fancybanner/fancybanner.component.html
+++ b/src/app/shared/sections/fancybanner/fancybanner.component.html
@@ -1,27 +1,28 @@
 <div class="container">
   <div class="banner-container">
+
     <div class="fancy-banner">
-      <div class="fancy-banner-text col-lg-6">
+
+      <div class="fancy-banner-text">
         <h2>Get the job of your dreams quickly.</h2>
         <p>
           Commonly used in the graphic, print publishing industries for
-          previewing visual mockups. limited social discrimination.
+          previewing visual mockups. Limited social discrimination.
         </p>
         <button>
-          Find your job.
-          <span class="fw-light text-decoration-underline" routerLink="/jobs">Explore All</span
-          ><span class="ms-2">></span>
+          <span>Find your job.</span>
+          <span class="fw-light text-decoration-underline" routerLink="/jobs">Explore All</span>
+          <i class="fas fa-chevron-right" style="font-size: 0.8em;"></i>
         </button>
       </div>
 
       <div class="fancy-banner-img">
-        <img src="/assets/img-1.jpg" loading="lazy" />
+        <img src="/assets/img-1.jpg" loading="lazy" alt="Job search banner" />
       </div>
     </div>
 
     <div
-      class="achievements-wrapper d-flex flex-column flex-sm-row justify-content-center align-items-center gap-5 text-center"
-    >
+      class="achievements-wrapper d-flex flex-column flex-sm-row justify-content-center align-items-center gap-5 text-center">
       <div class="achievement">
         <h1>7 Million</h1>
         <p>Completed Jobs</p>
@@ -33,7 +34,7 @@
       </div>
 
       <div class="achievement">
-        <h1>13billion</h1>
+        <h1>13 Billion</h1>
         <p>Dollar Payout</p>
       </div>
     </div>
