--- a/src/app/shared/sections/hero/hero.component.html
+++ b/src/app/shared/sections/hero/hero.component.html
@@ -3,22 +3,22 @@
   <div class="hero-icons d-none d-sm-block">
     <!-- Top Left Icon -->
     <div class="hero-icon hero-icon-1">
-      <img src="/assets/screen_10.png" alt="Business Card">
+      <img src="/assets/screen_10.png" loading="lazy" alt="Business Card">
     </div>
 
     <!-- Top Right Icon -->
     <div class="hero-icon hero-icon-2">
-      <img src="/assets/screen_12.png" alt="Art Card">
+      <img src="/assets/screen_12.png" loading="lazy" alt="Art Card">
     </div>
 
     <!-- Bottom Left Icon -->
     <div class="hero-icon hero-icon-3">
-      <img src="/assets/screen_11.png" alt="Design Card">
+      <img src="/assets/screen_11.png" loading="lazy" alt="Design Card">
     </div>
 
     <!-- Bottom Right Icon -->
     <div class="hero-icon hero-icon-4">
-      <img src="/assets/screen_13.png" alt="UI Design Card">
+      <img src="/assets/screen_13.png" loading="lazy" alt="UI Design Card">
     </div>
   </div>
 
