--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -56,7 +56,7 @@
       <div class="col-sm-6 mb-2 mb-sm-0">
         <button type="button" class="btn custom-social-btn w-100 p-3 fw-normal" (click)="googleLogin()"
           [disabled]="loading || authService.isFacebookLoading || authService.isGoogleLoading">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" alt="Google" width="20"
+          <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" loading="lazy" alt="Google" width="20"
             height="20" class="me-2" *ngIf="!authService.isGoogleLoading">
           <i *ngIf="authService.isGoogleLoading" class="spinner-border spinner-border-sm me-2"></i>
           {{ authService.isGoogleLoading ? 'Processing...' : 'Login with Google' }}
@@ -67,6 +67,7 @@
           [disabled]="loading || authService.isFacebookLoading || authService.isGoogleLoading">
           <img
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/32px-Facebook_f_logo_%282019%29.svg.png"
+            loading="lazy"
             alt="Facebook" width="20" height="20" class="me-2" *ngIf="!authService.isFacebookLoading">
           <i *ngIf="authService.isFacebookLoading" class="spinner-border spinner-border-sm me-2"></i>
           {{ authService.isFacebookLoading ? 'Processing...' : 'Login with Facebook' }}
