--- a/src/app/features/dashboard/shared/components/accountsettings/accountsettings.component.html
+++ b/src/app/features/dashboard/shared/components/accountsettings/accountsettings.component.html
@@ -123,6 +123,7 @@
       [disabled]="isLinkingFacebook || isFacebookLinked">
       <img
         src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/32px-Facebook_f_logo_%282019%29.svg.png"
+        loading="lazy"
         alt="Facebook" width="20" height="20" class="me-2" *ngIf="!isLinkingFacebook">
       <span *ngIf="isLinkingFacebook" class="spinner-border spinner-border-sm me-1"></span>
       {{ isLinkingFacebook ? 'Linking...' : (isFacebookLinked ? 'Facebook Linked' : 'Link Facebook Account') }}
@@ -131,7 +132,7 @@
     <button type="button" *ngIf="showLinkGoogle" class="btn btn-outline-secondary btn-sm" (click)="linkGoogle()"
       [disabled]="isLinkingGoogle || isGoogleLinked">
       <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" alt="Google" width="20"
-        height="20" class="me-2" *ngIf="!isLinkingGoogle">
+        height="20" class="me-2" loading="lazy" *ngIf="!isLinkingGoogle">
       <span *ngIf="isLinkingGoogle" class="spinner-border spinner-border-sm me-1"></span>
       {{ isLinkingGoogle ? 'Linking...' : (isGoogleLinked ? 'Google Linked' : 'Link Google Account') }}
     </button>
@@ -147,11 +148,11 @@
         <!-- Google Icon -->
         <img *ngIf="provider.includes('google')"
           src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" alt="Google" width="20"
-          height="20">
+          height="20" loading="lazy">
 
         <!-- Facebook Icon -->
         <img *ngIf="provider.includes('facebook')"
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/32px-Facebook_f_logo_%282019%29.svg.png"
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/32px-Facebook_f_logo_%282019%29.svg.png" loading="lazy"
           alt="Facebook" width="20" height="20">
 
         <!-- Provider Name -->
