--- a/src/app/features/jobs/job-details/job-details.component.html
+++ b/src/app/features/jobs/job-details/job-details.component.html
@@ -350,7 +350,7 @@
                 <div class="company-info">
                   <div class="company-logo">
                     <!-- <i class="fas fa-building"></i> -->
-                    <img [src]="job.logo_url" alt="Company Logo"
+                    <img [src]="job.logo_url" loading="lazy" alt="Company Logo"
                       style="width: 50px; height: 50px; object-fit: cover;" />
                   </div>
                   <div class="company-details">
