--- a/src/app/features/jobs/jobs-list/jobs-list.component.html
+++ b/src/app/features/jobs/jobs-list/jobs-list.component.html
@@ -296,7 +296,7 @@
         <div *ngIf="!loading && jobs.length === 0" class="empty-state text-center my-5">
           <div class="empty-state-content">
             <!-- Illustration -->
-            <img src="/assets/EmptyImg.svg" alt="No jobs found illustration" class="empty-state-image mb-4" />
+            <img src="/assets/EmptyImg.svg" loading="lazy" alt="No jobs found illustration" class="empty-state-image mb-4" />
 
             <!-- Message -->
             <h4 class="empty-state-title text-muted mb-3">No Jobs Available</h4>
@@ -313,7 +313,7 @@
           <div class="col-md-6 col-xl-4 mb-4" *ngFor="let job of jobs">
             <div class="job-card">
               <div class="job-card-header">
-                <img [src]="job.company_logo" alt="Company Logo"
+                <img [src]="job.company_logo" loading="lazy" alt="Company Logo"
                   style="width: 50px; height: 50px; object-fit: cover;" />
                 <button class="btn btn-sm btn-outline-secondary bookmark-btn" [class.active]="job.isSaved"
                   [class.loading]="job.isSaving" [disabled]="job.isSaving" (click)="onToggleSaveJob(job)"
