--- a/src/app/shared/sections/footer/footer.component.html
+++ b/src/app/shared/sections/footer/footer.component.html
@@ -2,13 +2,13 @@
   <div class="footer d-flex flex-column flex-lg-row gap-5">
     <div class="footer-header">
       <a class="brand-logo" routerLink="/">
-        <img src="/assets/jobnetlogo2.png" alt="" width="150" height="45" style="object-fit: cover;" loading="lazy">
+        <img src="/assets/jobnetlogo2.png" loading="lazy" alt="" width="150" height="45" style="object-fit: cover;">
       </a>
       <div>
         <a href="">jobnetsupport&#64;new.com</a>
       </div>
       <div class="mt-5">
-        <img src="/assets/shape-2.svg" alt="" width="55" height="55" />
+        <img src="/assets/shape-2.svg" loading="lazy" alt="" width="55" height="55" />
       </div>
     </div>
     <div class="footer-category-container d-flex flex-column flex-lg-row gap-5">
