--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -29,6 +29,7 @@
 
 .signupHeader p {
   font-size: 1.2rem;
+  padding: 0 0.5rem;
   font-family: "Gordita-Regular", cursive;
 }
 
@@ -105,6 +106,7 @@ img {
 
   .signupHeader p {
     font-size: 1.3rem;
+    padding: 0;
   }
 }
 
